--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@ body{
     height: 100vh;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
-}
+}.
+  
+,
 
 .main-container{
     position: relative;
